fix fb2.css image alignment

--- a/cr3gui/data/fb2.css
+++ b/cr3gui/data/fb2.css
@@ -13,7 +13,7 @@ emphasis, i { font-style: italic }
 a { text-decoration: underline }
 a[type="note"] { vertical-align: super; font-size: 70%; text-decoration: none }
 
-image { text-align: center; text-indent: 0px }
+image { text-align: center; text-indent: 0px; display: block }
 p image { display: inline }
 
 title p, subtitle p, h1 p, h2 p, h3 p, h4 p, h5 p, h6 p { text-align: center; text-indent: 0px }
